--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laboratorio 3</title>
     <script src="lab3.js"></script>
+    <script src="prueba.js"></script>
 </head>
 <body>
     <h1>Resolución de los siguientes problemas. Las cadenas o entradas</h1>
@@ -42,8 +43,8 @@
     </div><br>
     <div id="p4">
         4. Suma de Primos <br>
-        <input id="primo" type="text"><br><br>
-        <button onclick="primo(primo)">Realizar la suma</button>
+        <input id="p4" type="text"><br><br>
+        <button onclick="primo()">Realizar la suma</button>
     </div>
     
 </body>
