terminado p4, solo falta p1

--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laboratorio 3</title>
     <script src="lab3.js"></script>
-    <script src="prueba.js"></script>
+    <script src="p4.js"></script>
+    <script src="p1.js"></script>
 </head>
 <body>
     <h1>Resolución de los siguientes problemas. Las cadenas o entradas</h1>
-    <div>1. Ingrese una cadena <br>
+    <div>1. Ingrese una cadena, este problema no esta del todo terminado. <br>
 
         <input id="palindromo" type="text"><br><br>
-        <button id="p1">Validar Cadena</button>
+        <button id="p1" onclick="operacion1()" >Validar Cadena</button>
 
     </div><br>
     <div>
@@ -42,9 +43,8 @@
         <button onclick="operacion3()">Validar año</button>
     </div><br>
     <div id="p4">
-        4. Suma de Primos <br>
-        <input id="p4" type="text"><br><br>
-        <button onclick="primo()">Realizar la suma</button>
+        4. Suma de Primos
+        <p>La suma de los primos se realiza al cargar la página y preguntar un número</p>
     </div>
     
 </body>
