--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <title>Laboratorio 3</title>
     <script src="lab3.js"></script>
     <script src="p4.js"></script>
-    <script src="p1.js"></script>
 </head>
 <body>
     <h1>Resolución de los siguientes problemas. Las cadenas o entradas</h1>
     <div>1. Ingrese una cadena, este problema no esta del todo terminado. <br>
 
-        <input id="palindromo" type="text"><br><br>
-        <button id="p1" onclick="operacion1()" >Validar Cadena</button>
+        <br>
+        <button id="p1" > <a href="prueba.html">Validar Cadena</a></button>
 
     </div><br>
     <div>
@@ -43,7 +42,7 @@
         <button onclick="operacion3()">Validar año</button>
     </div><br>
     <div id="p4">
-        4. Suma de Primos
+        4. Suma de Primos 
         <p>La suma de los primos se realiza al cargar la página y preguntar un número</p>
     </div>
     
