se corrije texto

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Resolución de los siguientes problemas. Las cadenas o entradas</h1>
-    <div>1. Ingrese una cadena, este problema no esta del todo terminado. <br>
+    <div>1. Ingrese una cadena. <br>
 
         <br>
         <button id="p1" > <a href="prueba.html">Validar Cadena</a></button>
